src/main/java/com/example/frota/errors/MotoristaInativoException.java
package com.example.frota.errors;

public class MotoristaInativoException extends RuntimeException {
    public MotoristaInativoException(String message) {
        super(message);
    }
}